--- a/Tests/CarShop.Services.Data.Tests/CarShop.Services.Data.Tests.csproj
+++ b/Tests/CarShop.Services.Data.Tests/CarShop.Services.Data.Tests.csproj
@@ -11,6 +11,10 @@
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
+  
+  <PropertyGroup>
+    <ErrorOnDuplicatePublishOutputFiles>false</ErrorOnDuplicatePublishOutputFiles>
+  </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.5" />
