Add inputViewModel for Contact form

--- a/Web/CarShop.Web.ViewModels/CarShop.Web.ViewModels.csproj
+++ b/Web/CarShop.Web.ViewModels/CarShop.Web.ViewModels.csproj
@@ -29,6 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Contacts\ContactInputFormModel.cs">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Compile>
     <Compile Update="Credits\CreateCreditViewModel.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
